# vigen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_CN.md
skills/vigen-gen/: SKILL.md
skills/vigen-see/: SKILL.md
src/: auth.rs  config.rs  error.rs  main.rs  pkce.rs
src/providers/: google.rs  gpt.rs  http.rs  mod.rs
