[package]
name = "vigen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
base64 = "0.22"
async-trait = "0.1"
url = "2"
webbrowser = "1"
sha2 = "0.10"
rand = "0.8"
