[package]
name = "vigen"
version = "0.1.0"
edition = "2021"
description = "Vision + Gen — CLI tool for text-only models to access vision AI (Google Gemini) and image generation (OpenAI)"
license = "MIT"
repository = "https://github.com/trtyr/vigen"
readme = "README.md"
keywords = ["vision", "image-generation", "cli", "gemini", "openai"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
base64 = "0.22"
async-trait = "0.1"
url = "2"
webbrowser = "1"
sha2 = "0.10"
rand = "0.8"
